[package]
name = "typst-batch"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Typst unofficial library for batch processing — friendly API, shared resources, virtual files, customizable diagnostics"
keywords = ["typst", "compiler", "batch", "world"]
categories = ["compilers", "text-processing"]
repository = "https://github.com/tola-ssg/typst-batch"

[features]
default = ["colored-diagnostics"]
colored-diagnostics = ["dep:colored"]
svg = ["dep:typst-svg"]

[dependencies]
# Typst core
typst = "0.14.1"
typst-kit = { version = "0.14.1", features = ["fonts", "packages"] }
typst-html = "0.14.1"
typst-svg = { version = "0.14.1", optional = true }

# Error handling
thiserror = "2.0"

# Concurrency
parking_lot = "0.12"

# Utilities
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rustc-hash = "2.1"
serde_json = "1.0"

# Optional
colored = { version = "3.0", optional = true }

[dev-dependencies]
tempfile = "3.10"
