[package]
name = "typst-batch"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Typst helper library for batch processing — friendly API, shared resources, virtual files, customizable diagnostics"
keywords = ["typst", "compiler", "batch", "world"]
categories = ["compilers", "text-processing"]
repository = "https://github.com/tola-rs/typst-batch"

[features]
default = ["colored-diagnostics", "scan", "batch"]
colored-diagnostics = ["dep:owo-colors"]
svg = ["dep:typst-svg"]
scan = ["dep:typst-eval"]
batch = ["dep:rayon"]

[dependencies]
# Typst core
typst = "0.14.1"
typst-eval = { version = "0.14.1", optional = true }
typst-kit = { version = "0.14.1", features = ["fonts", "packages"] }
typst-html = "0.14.1"
typst-svg = { version = "0.14.1", optional = true }

# Error handling
thiserror = "2.0"

# Concurrency
parking_lot = "0.12"
rayon = { version = "1.10", optional = true }

# Utilities
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rustc-hash = "2.1"
serde_json = "1.0"

# Optional
owo-colors = { version = "4", optional = true, features = ["supports-colors"] }

[dev-dependencies]
tempfile = "3.10"
